--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>SweetTooth | Home</title>
+    <title>Rifat Sk task1</title>
     <script src="https://kit.fontawesome.com/3165ac6b1d.js" crossorigin="anonymous"></script>
 </head>
 <body>
